--- a/style.css
+++ b/style.css
@@ -1,1 +1,4 @@
-body{background: url(fundo.jpeg);}
+body{background: url(fundo.jpeg);
+    background-size: cover;
+    background-repeat: no-repeat;    
+}
