--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{background: url(fundo.jpeg);
+body{background: url(fundo2.jpeg);
     background-size: cover;
     background-repeat: no-repeat;    
 }
